@@ -252,8 +252,11 @@ S3method(facet_train_layout,null)
 S3method(facet_train_layout,wrap)
 S3method(format,facet)
 S3method(fortify,"NULL")
+S3method(fortify,cld)
+S3method(fortify,confint.glht)
 S3method(fortify,data.frame)
 S3method(fortify,default)
+S3method(fortify,glht)
 S3method(fortify,Line)
 S3method(fortify,Lines)
 S3method(fortify,lm)
@@ -262,6 +265,7 @@ S3method(fortify,Polygon)
 S3method(fortify,Polygons)
 S3method(fortify,SpatialLinesDataFrame)
 S3method(fortify,SpatialPolygons)
+S3method(fortify,summary.glht)
 S3method(ggplot,data.frame)
 S3method(ggplot,default)
 S3method(grid.draw,absoluteGrob)
